--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux-saga": "^1.1.3",
+    "swiper": "^8.0.6",
     "typescript": "^4.5.5"
   },
   "scripts": {
