--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "redux-saga": "^1.1.3",
     "swiper": "^8.0.6",
     "typescript": "^4.5.5"
