--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "history": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.1.9",
     "file-loader": "^6.2.0"
   }
 }
