--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "redux-saga": "^1.1.3",
+    "svgo": "^2.8.0",
     "swiper": "^8.0.6",
     "typescript": "^4.5.5"
   },
