--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.0",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -16,6 +21,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "formik": "^2.2.9",
     "history": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,9 +30,12 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.5",
     "svgo": "^2.8.0",
     "swiper": "^8.0.6",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,6 +63,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.9",
+    "@types/uuid": "^8.3.4",
     "file-loader": "^6.2.0"
   }
 }
